style.css
body {
    margin: 0;
}


#container {
    position: fixed;
    text-align: center;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}


#container h1 {
    order: 1;
    color: white;
    font-family: 'Popins', sans-serif;
    font-size: 5vw;
    margin: 8px;
}

#container h2 {
    order: 2;
    color: white;
    font-family: 'Popins', sans-serif;
    font-size: 2.5vw;
    font-weight: normal;
    margin: 8px;
}

#container a {
    order: 3;
    font-size: 1.8vw;
    cursor: pointer;
    padding: 0 62px;
    height: 64px;
    display: grid;
    place-items: center;
    border-radius: 50px;
    color: white;
    text-decoration: none;
    font-family: 'Popins', sans-serif;
    font-weight: bold;
    transition: 0.5s;
    margin-top: 32px;
    background: linear-gradient(45deg, #ff0000, #ffaa00, #ffee00);
    background-size: 300% 300%;
    animation: fancy 6s infinite;
    transition: 0.4s;
    border: 2px solid rgba(0, 0, 0, 0)
}

#container a:hover {
    border: 2px solid rgba(255, 255, 255, 0.8);
}

#container img {
    order: 4;
    border-radius: 20px;
    width: 200px;
    height: auto;
    margin-top: 48px;
}

.lang-switcher-container {
    position: absolute;
    top: 15px;
    left: 15px;
    display: flex;
    gap: 2vh;
}

.lang-switcher-button {
    font-size: 1vw;
    cursor: pointer;
    padding: 10.5px 25px;
    display: grid;
    place-items: center;
    border-radius: 50px;
    color: white;
    text-decoration: none;
    font-family: 'Popins', sans-serif;
    font-weight: bold;
    transition: 0.5s;
    background: inherit;
    background-size: 300% 300%;
    animation: fancy 6s infinite;
    transition: 0.4s;
    border: 2px solid rgba(255, 255, 255, 1);
    text-transform: uppercase;

}

.lang-switcher-button:hover {
    border: 2px solid rgba(0, 0, 0, 1);
    color: black;
    background-color: white;
}

@keyframes fancy {
    0% {
        background-position: 1% 99%;
    }

    33% {
        background-position: 22% 22%;
    }

    66% {
        background-position: 88% 88%;
    }

    100% {
        background-position: 1% 99%;
    }
}


#videobcg {
    width: 100vw;
    height: 100vh;
    text-align: center;
    overflow: hidden;
    position: fixed;
    z-index: -1;
    -o-filter: blur(15px);
    filter: blur(6px) brightness(50%);
    object-fit: cover;
    transform: scale(1.04);
}

@media only screen and (max-width: 900px) {
    #container h1 {
        font-size: 8vw;
    }

    #container h2 {
        font-size: 4vw;
    }

    #container a {
        order: 4;
        font-size: 5vw;
        margin-top: 48px;
    }

    #container img {
        order: 3;
        margin-top: 32px;
    }

    .lang-switcher-button {
        font-size: 3vw;
    }

    .lang-switcher-container{
        left: 0;
        width: 100%;
        justify-content: center;
    }
}

@media only screen and (max-width: 320px) {

    .lang-switcher-container{
        gap: 2vw;
    }

    .lang-switcher-button {
        padding: 8px 18px;
    }
}

